Feature: Migration to airplanes_live API from openskys
